--- a/rescat/rescat/Sign/Storyboard/Sign.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Sign.storyboard
@@ -562,7 +562,7 @@
         <!--Navigation Controller-->
         <scene sceneID="TYT-bn-TbT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="61E-kc-niy" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainSignNaviVC" automaticallyAdjustsScrollViewInsets="NO" id="61E-kc-niy" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="egW-Vd-LHg">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
