--- a/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
+++ b/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
@@ -158,9 +158,8 @@
                                                                                     </constraints>
                                                                                 </imageView>
                                                                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0uy-CQ-S4P">
-                                                                                    <rect key="frame" x="29" y="50.5" width="84" height="84"/>
+                                                                                    <rect key="frame" x="44" y="50.5" width="54" height="84"/>
                                                                                     <constraints>
-                                                                                        <constraint firstAttribute="width" constant="84" id="FU7-Se-DE7"/>
                                                                                         <constraint firstAttribute="height" constant="84" id="c5t-ec-69f"/>
                                                                                     </constraints>
                                                                                     <state key="normal" title="Button"/>
@@ -180,6 +179,7 @@
                                                                                 <constraint firstItem="0uy-CQ-S4P" firstAttribute="centerX" secondItem="Sbt-vI-fjM" secondAttribute="centerX" id="Wse-UA-iUs"/>
                                                                                 <constraint firstItem="5jN-xE-577" firstAttribute="top" secondItem="Sbt-vI-fjM" secondAttribute="top" constant="13" id="cDv-PN-fTN"/>
                                                                                 <constraint firstItem="gBg-kO-V9n" firstAttribute="leading" secondItem="Sbt-vI-fjM" secondAttribute="leading" constant="8" id="ddP-23-eHa"/>
+                                                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WmL-9a-Z98" secondAttribute="trailing" constant="20" symbolic="YES" id="e5T-ds-3Aj"/>
                                                                                 <constraint firstItem="NEP-Bl-5Kj" firstAttribute="top" secondItem="WmL-9a-Z98" secondAttribute="bottom" constant="4" id="gg1-zi-Qv2"/>
                                                                                 <constraint firstItem="WmL-9a-Z98" firstAttribute="leading" secondItem="Sbt-vI-fjM" secondAttribute="leading" constant="13" id="n2X-U6-Q8c"/>
                                                                                 <constraint firstItem="0uy-CQ-S4P" firstAttribute="centerY" secondItem="Sbt-vI-fjM" secondAttribute="centerY" id="ngA-AD-1IN"/>
@@ -213,7 +213,7 @@
                                                     </collectionViewCell>
                                                 </cells>
                                             </collectionView>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="180" estimatedRowHeight="-1" sectionHeaderHeight="20" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="kpO-7Q-Dti">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="180" estimatedRowHeight="-1" sectionHeaderHeight="20" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="kpO-7Q-Dti">
                                                 <rect key="frame" x="0.0" y="454" width="375" height="710"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
@@ -282,6 +282,7 @@
                                             <constraint firstAttribute="trailing" secondItem="bFJ-QE-S5u" secondAttribute="trailing" id="Kyd-W2-9Qw"/>
                                             <constraint firstItem="RHY-2K-5ls" firstAttribute="leading" secondItem="Emr-VM-5or" secondAttribute="leading" constant="22" id="Nol-WS-eEy"/>
                                             <constraint firstItem="OQk-ee-DrW" firstAttribute="top" secondItem="Emr-VM-5or" secondAttribute="top" id="RjQ-xF-8R1"/>
+                                            <constraint firstItem="G9K-wb-pe4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RHY-2K-5ls" secondAttribute="trailing" constant="8" symbolic="YES" id="TiX-xK-PfQ"/>
                                             <constraint firstItem="dvo-q9-Pj7" firstAttribute="top" secondItem="kpO-7Q-Dti" secondAttribute="bottom" constant="25" id="YhF-fw-pBg"/>
                                             <constraint firstItem="bFJ-QE-S5u" firstAttribute="leading" secondItem="Emr-VM-5or" secondAttribute="leading" id="acU-CR-8wJ"/>
                                             <constraint firstAttribute="bottom" secondItem="dvo-q9-Pj7" secondAttribute="bottom" id="c59-Zh-dKH"/>
@@ -293,6 +294,7 @@
                                             <constraint firstItem="G9K-wb-pe4" firstAttribute="top" secondItem="OQk-ee-DrW" secondAttribute="bottom" constant="10" id="t15-yy-GsN"/>
                                             <constraint firstItem="oua-oT-rp5" firstAttribute="height" secondItem="G9K-wb-pe4" secondAttribute="height" id="vbf-la-0D3"/>
                                             <constraint firstItem="kpO-7Q-Dti" firstAttribute="leading" secondItem="Emr-VM-5or" secondAttribute="leading" id="wQS-YF-5Rc"/>
+                                            <constraint firstItem="oua-oT-rp5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="dO8-3A-bmk" secondAttribute="trailing" constant="8" symbolic="YES" id="xlA-CG-YWL"/>
                                             <constraint firstAttribute="trailing" secondItem="dvo-q9-Pj7" secondAttribute="trailing" id="zfv-Gl-zyJ"/>
                                         </constraints>
                                     </view>
@@ -317,7 +319,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Rescat" id="ffS-D2-LOu">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="iconNewPost" id="Soh-19-OO2">
-                            <color key="tintColor" red="0.43137254899999999" green="0.30196078430000001" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="tintColor" red="0.74509803921568629" green="0.59999999999999998" blue="0.50588235294117645" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="registerFundingAction:" destination="U64-Hh-ROG" id="dZF-7Z-IuG"/>
                             </connections>
