--- a/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
+++ b/rescat/rescat/MyPage/Storyboard/MyPage.storyboard
@@ -48,7 +48,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아이디" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOb-On-NgP">
                                             <rect key="frame" x="30" y="93" width="335" height="20"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="16"/>
-                                            <color key="textColor" red="0.70808178186416626" green="0.59363794326782227" blue="0.50586527585983276" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVZ-sk-cU1">
@@ -409,9 +409,11 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="quk-fr-mLl" id="U1P-ak-QPE"/>
+                        <segue destination="HFR-D5-1au" kind="unwind" identifier="unwindToMyPage" unwindAction="unwindToMyPageWithSender:" id="mMa-UZ-nZa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XW5-Or-yCm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="HFR-D5-1au" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="872.79999999999995" y="7.6461769115442282"/>
         </scene>
