--- a/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
+++ b/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
@@ -15,10 +15,12 @@
             <objects>
                 <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="mVF-x8-DHt" customClass="TabBarController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionIndicatorImage="icTab1On" id="3cA-dB-His">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3cA-dB-His">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" red="0.86810618640000003" green="0.56897825000000002" blue="0.56077408790000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="defaultIndex">
@@ -35,11 +37,13 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
-        <!--길냥이맵-->
+        <!--Navigation Controller-->
         <scene sceneID="isa-UZ-90R">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hFs-Fx-JkP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="길냥이맵" selectedImage="icTap1On" id="bui-nU-MyD"/>
+                    <tabBarItem key="tabBarItem" title="" image="icTap1Off" id="bui-nU-MyD">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TVZ-dL-cbV">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1886,12 +1890,12 @@
             </objects>
             <point key="canvasLocation" x="5568.8000000000002" y="2579.4602698650679"/>
         </scene>
-        <!--마이페이지-->
+        <!--Navigation Controller-->
         <scene sceneID="gfi-Tv-BwQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bvF-1l-8SL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="마이페이지" selectedImage="icTabMypageOn" id="nBb-Fs-1Ds">
-                        <color key="badgeColor" red="0.94901960780000005" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <tabBarItem key="tabBarItem" title="" image="icTabMypageOn" id="nBb-Fs-1Ds">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qqI-ao-iWU">
@@ -1907,11 +1911,14 @@
             </objects>
             <point key="canvasLocation" x="1054" y="2527"/>
         </scene>
-        <!--도와주세요-->
+        <!--Navigation Controller-->
         <scene sceneID="mb7-wc-rAe">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aUh-PN-WQj" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="도와주세요" selectedImage="icTabRescatOn" id="xKv-Pe-xOw"/>
+                    <tabBarItem key="tabBarItem" title="" image="icTabRescatOn" id="xKv-Pe-xOw">
+                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                        <inset key="largeContentSizeImageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XEN-xh-Y82">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -1971,10 +1978,9 @@
         <image name="doneWait" width="375" height="358"/>
         <image name="icEtc" width="21" height="21"/>
         <image name="icRemove" width="29" height="29"/>
-        <image name="icTab1On" width="16" height="16"/>
         <image name="icTabMypageOn" width="36" height="36"/>
         <image name="icTabRescatOn" width="36" height="36"/>
-        <image name="icTap1On" width="36" height="36"/>
+        <image name="icTap1Off" width="36" height="36"/>
         <image name="iconNewPost" width="24" height="24"/>
         <image name="lableCardTemporarily" width="59" height="21"/>
     </resources>
